Updated debugger watches
- added editing of watched address and string length to MemoryWatchesModel
- debug window now provides context menu for watches widget that enables user configuration of watches, removal of watches, etc.
- added abstract base class for int watches to make configuring watches of different int sizes possible (e.g. set base, byte order)
- IntegerMemoryWatch template class now inherits new abstract base class
- string watches can now switch between ASCII/Spectrum charset
- added model/view delegate to enable editing of watch addresses with hex spin box
- added size() virtual method to memory watch base class
- added copy icon to resources

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -62,6 +62,7 @@ add_executable(
         debugger/registerbreakpoint.h
         debugger/registervaluebreakpoint.cpp
         debugger/memorywatch.h
+        debugger/integermemorywatchbase.h
         debugger/integermemorywatch.h
         debugger/stringmemorywatch.h
         qtui/application.cpp
@@ -79,6 +80,7 @@ add_executable(
         qtui/memoryview.cpp
         qtui/memorydebugwidget.cpp
         qtui/memorywatchesmodel.cpp
+        qtui/hexspinboxdelegate.cpp
         qtui/custompokewidget.cpp
         qtui/custompokewidget.h
         qtui/qimagedisplaydevice.cpp
