Updated emulator debugger
- abstracted context menu for watches view and memory view to separate class for clarity and encapsulation
- fixed value of integer watches not using the fill character and field width as expected - std::stream output in this regard is not intuitive since it places the fill character before the base indicator instead of after it (e.g. 00x60f instead of 0x060f).

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -80,6 +80,8 @@ add_executable(
         qtui/memoryview.cpp
         qtui/memorydebugwidget.cpp
         qtui/memorywatchesmodel.cpp
+        qtui/watchescontextmenu.cpp
+        qtui/memorycontextmenu.cpp
         qtui/hexspinboxdelegate.cpp
         qtui/custompokewidget.cpp
         qtui/custompokewidget.h
