Updated emulator debugger
- abstracted context menu for watches view and memory view to separate class for clarity and encapsulation
- moved all debug-specific UI code into its own namespace for maintainability
- fixed value of integer watches not using the fill character and field width as expected - std::stream output in this regard is not intuitive since it places the fill character before the base indicator instead of after it (e.g. 00x60f instead of 0x060f).

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -64,7 +64,7 @@ add_executable(
         debugger/memorywatch.h
         debugger/integermemorywatchbase.h
         debugger/integermemorywatch.h
-        debugger/stringmemorywatch.h
+        debugger/stringmemorywatch.cpp
         qtui/application.cpp
         qtui/mainwindow.cpp
         qtui/aboutwidget.cpp
