Added searching to debug memory view
- MemoryView now has find() methods to search for:
  - (Un)signed byte
  - (Un)signed word
  - array of bytes
- MemoryView tracks last search result and resumes next search from next byte
- created MemorySearchWidget to capture user search requests
- MemoryWidget in Debug window now has a MemorySearchWidget to search the memory
- removed program counter breakpoint button from "go to" widget in memory view - functionality is covered more flexibly by context menu

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -79,6 +79,7 @@ add_executable(
         qtui/debugger/programpointerswidget.cpp
         qtui/memoryview.cpp
         qtui/debugger/memorywidget.cpp
+        qtui/debugger/memorysearchwidget.cpp
         qtui/debugger/memorywatchesmodel.cpp
         qtui/debugger/watchescontextmenu.cpp
         qtui/debugger/memorycontextmenu.cpp
