First draft of breakpoints view in debug window
- removed brakpoint icon - no longer used
- added model class for breakpoints
- breakpoints in debug window now managed in a model class that stores smart pointers
- added dock (bottom) listing breakpoints
- added custom context menu class for breakpoints view

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -81,7 +81,9 @@ add_executable(
         qtui/debugger/memorywidget.cpp
         qtui/debugger/memorysearchwidget.cpp
         qtui/debugger/memorywatchesmodel.cpp
+        qtui/debugger/breakpointsmodel.cpp
         qtui/debugger/watchescontextmenu.cpp
+        qtui/debugger/breakpointscontextmenu.cpp
         qtui/debugger/memorycontextmenu.cpp
         qtui/hexspinboxdelegate.cpp
         qtui/pokewidget.cpp
