Added view of breakpoints for debug window
- created model to store breakpoints
- debug window uses model to store breakpoints
- updated docs for DebugWindow
- added template base class for views that want to overlay actions for items when they are hovered
- created view widget for breakpoints, inheriting from QTreeView with the hovered-item-action overlay
- breakpoints view uses the model for breakpoints (owned by debugwindow, borrowed by view widget)

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -72,6 +72,7 @@ add_executable(
         qtui/pokesview.cpp
         qtui/pokesviewitem.cpp
         qtui/thread.cpp
+        qtui/actionableitemview.h
         qtui/debugger/debugwindow.cpp
         qtui/debugger/registerswidget.cpp
         qtui/debugger/shadowregisterswidget.cpp
@@ -81,6 +82,7 @@ add_executable(
         qtui/debugger/memorywidget.cpp
         qtui/debugger/memorysearchwidget.cpp
         qtui/debugger/memorywatchesmodel.cpp
+        qtui/debugger/breakpointsview.cpp
         qtui/debugger/breakpointsmodel.cpp
         qtui/debugger/watchescontextmenu.cpp
         qtui/debugger/breakpointscontextmenu.cpp
