--- a/src/interpreter/CMakeLists.txt
+++ b/src/interpreter/CMakeLists.txt
@@ -4,7 +4,12 @@ add_executable(
         z80interpreter
         ../cpu.cpp
         ../z80/z80.cpp
+        ../z80/types.cpp
+        ../z80/executionhistory.cpp
         ../z80/registers.cpp
+        ../z80/assembly/disassembler.cpp
+        ../z80/assembly/mnemonic.cpp
+        ../z80/assembly/operand.cpp
         z80interpreter.cpp
         operand.cpp
         main.cpp
