Fixes for apple/clang build
- polyfill for concepts not yet implemented in the clang standard library concepts library
- detection and use of polyfill when building on clang version without the concepts in snapshotformatmatcher.h and actionableitemview.h
- fixed ambiguous cast when seeking in the input stream in Z80SnapshotReader

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -124,7 +124,7 @@ add_executable(
         ../util/endian.h
         ../util/debug.h
         ../util/numeric.h
-)
+        ../util/concepts.h)
 
 target_link_libraries(spectrum Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Gamepad Qt5::DBus)
 
