Updated emulator Qt UI
- PokesViewItem renamed CheatsViewItem for consistency
- added comment docs for CheatsViewItem class

--- a/src/spectrum/CMakeLists.txt
+++ b/src/spectrum/CMakeLists.txt
@@ -70,7 +70,7 @@ add_executable(
         qtui/aboutwidget.cpp
         qtui/helpwidget.cpp
         qtui/cheatsview.cpp
-        qtui/pokesviewitem.cpp
+        qtui/cheatsviewitem.cpp
         qtui/thread.cpp
         qtui/actionableitemview.h
         qtui/debugger/debugwindow.cpp
